--- a/assets/css/universal-theme.css
+++ b/assets/css/universal-theme.css
@@ -2660,3 +2660,58 @@ body {
           align-items: center;
   fill: #BCBFC2;
 }
+
+.category-pagination {
+  margin-top: 40px;
+  margin-bottom: 100px;
+}
+
+.category-pagination .nav-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+.category-pagination .page-numbers {
+  padding: 17px 25px;
+  color: #262D33;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 20px;
+  text-decoration: none;
+}
+
+.category-pagination .page-numbers:not(:last-child) {
+  border-right: 1px solid #D9DADB;
+}
+
+.category-pagination .prev::before {
+  content: '';
+  width: 15px;
+  height: 7px;
+  display: inline-block;
+  background: url(../images/arrow-prev.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 10px;
+}
+
+.category-pagination .next::after {
+  content: '';
+  width: 15px;
+  height: 7px;
+  display: inline-block;
+  background: url(../images/arrow-next.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 10px;
+}
+
+.category-pagination .current {
+  color: #4592FF;
+}
